# ui-exam

./: .envrc.example  .gitignore  CLAUDE.md  PLAN.md  README.md  config.toml.example  gunicorn.conf.py  pyproject.toml  run.sh
.claude/: settings.json
src/examui/: __init__.py  config.py  parsing.py
src/examui/data/: __init__.py  history.py
src/examui/lang/: graph.py  parsing.py
src/examui/models/: events.py  history.py  oral.py  source.py  store.py
src/examui/pipeline/: __init__.py  collect.py  compute.py  db.py  fetch.py
src/examui/static/: base.css  common.js  history.js  oral.js  pygments.css  schedule.js  student.css  student.js  teacher.css  teacher.js
src/examui/templates/: base.html  giustifica.html  history.html  list.html  oral.html  public_schedule.html  schedule.html  student.html  teacher.html
src/examui/templates/history/: detail.html  list.html
src/examui/templates/oral/: student.html
src/examui/views/: history.py  oral.py  schedule.py  student.py  teacher.py
tests/lang/: test_graph.py  test_parsing.py
