[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[project]
name = "examui"
version = "0.1.0"
description = "Oral exam assistant web UI"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "xlrd",
    "pygments",
    "tree-sitter",
    "tree-sitter-java",
    "openpyxl>=3.1.5",
    "graphviz>=0.20",
    "requests",
    "rapidfuzz>=3.14",
    "pygount>=1.8",
]

[project.scripts]
exam-pipeline = "examui.pipeline:cli"

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length  = 100
indent-width = 2

[tool.ruff.format]
indent-style  = "space"
quote-style   = "single"
